RESOLVED FIXED105398
[BlackBerry] Fix undesired re-entrant calls during media error dialog
https://bugs.webkit.org/show_bug.cgi?id=105398
Summary [BlackBerry] Fix undesired re-entrant calls during media error dialog
Max Feil
Reported 2012-12-19 00:37:00 PST
A recent change in libwebview/fe1e943 to the dialog handling means that dialogs are not truly blocking anymore. While the dialog is up, a sub-event loop is called. Therefore the HTML5 media code will continue processing pps messages from mm-renderer, responding to periodic timers, etc., all while a media error dialog call higher up in the stack is waiting for the user to respond. Unfortunately some places in our code do not anticipate being called in a re-entrant way. This patch restores behaviour to how it was previous to libwebview/fe1e943.
Attachments
Patch (2.17 KB, patch)
2012-12-19 00:43 PST, Max Feil
no flags
Max Feil
Comment 1 2012-12-19 00:43:13 PST
Rob Buis
Comment 2 2012-12-19 05:07:24 PST
Comment on attachment 180111 [details] Patch LGTM.
WebKit Review Bot
Comment 3 2012-12-19 05:14:47 PST
Comment on attachment 180111 [details] Patch Clearing flags on attachment: 180111 Committed r138145: <http://trac.webkit.org/changeset/138145>
WebKit Review Bot
Comment 4 2012-12-19 05:14:51 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.